--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
         border: 1px solid black;
         display: flex;
         align-items: center;
+        background-color:rgb(28,255,28);
       }
 
       .logo {
-        border: 1px solid black;
         width: 100px;
         text-align: center;
         padding: 35px 0;
-        margin: 20px;
+        margin: 10px;
       }
 
       .titulo {
         flex-grow: 1;
+        font-size: 28;
+        font-weight: bold;
+        margin: 20px;
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
 
       .redes {
@@ -33,18 +37,23 @@
       }
 
       .redes .twitter {
-        border: 1px solid black;
-        height: 20px;
+        height: 10px;
         margin: 10px;
       }
       .redes .facebook {
-        height: 20px;
-        border: 1px solid black;
+        height: 10px;
         margin: 10px;
+      }
+
+      .social {
+        width: 40px;
+
       }
 
       .menu {
         border: 1px solid black;
+        background-color: rgb(170,255,170);
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
 
       .menu-item {
@@ -54,50 +63,127 @@
       .cuerpo {
         display: flex;
         flex-direction: row;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       }
 
       .panel-izquierdo {
         border: 1px solid black;
         padding: 20px;
         flex-grow: 1;
+        display: inline-block;
+        text-align: center;
       }
 
       .panel-derecho {
         border: 1px solid black;
         padding: 20px;
         width: 250px;
+        display: block;
+        text-align: center;
+      }
+
+      .ofertas {
+        align-items:center;
+        flex-wrap: wrap;
       }
 
       .footer {
         padding: 20px;
+        position: absolute;
+        bottom: 0;
       }
+
+      .link {
+        display:inline-block;
+        font-weight: bold;
+        margin-top: 2px;
+        margin-bottom: 10px;
+      }
+
+      .oferta {
+        width: 220;
+        height: 170;
+        border: 1px solid black;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 40px;
+        display:inline;
+      }
+
+      .masVendido {
+        width: 200; 
+        height: 140;
+        border: 1px solid black;
+      }
+
+      .anuncio {
+        width: 500;
+        height: 90;
+        margin-top: 60px;
+        margin-bottom: 20px;
+      }
+
     </style>
   </head>
   <html>
     <div class="contenedor">
       <div class="header">
-        <div class="logo">LOGO</div>
-        <div class="titulo">Titulo</div>
+        <div class="logo">
+          <img src="img/logo.png" class="logo">
+        </div>
+        <div class="titulo">TR STORE</div>
 
         <div class="redes">
-          <div class="twitter">TWITTER</div>
-          <div class="twitter">FACEBOOK</div>
+          <div class="twitter">
+            <a href="https://twitter.com" target="_blank">
+              <img src="img/twitter.png" class="social">
+            </a>
+          </div>
+          <div class="facebook">
+            <a href="https://facebook.com" target="_blank">
+              <img src="img/facebook.png" class="social">
+            </a>
+          </div>
         </div>
       </div>
       <div class="menu">
-        <a class="menu-item">OFERTAS</a>
-        <a class="menu-item">PRODUCTOS</a>
+        <a href="" class="menu-item">OFERTAS</a>
+        <a href="" class="menu-item">PRODUCTOS</a>
       </div>
       <div class="cuerpo">
         <div class="panel-izquierdo">
-          <h4>OFERTAS</h4>
+          <h3>OFERTAS</h3>
+
+          <img src="img/oferta1.jpg" class="oferta">
+          <img src="img/oferta2.jpg" class="oferta">
+          <a href="">Lavarropas</a> 
+
+          <a href="https://www.adidas.com.ar" target="_blank">
+            <img src="img/banner.jpg" class="anuncio">
+          </a>
+
+          <img src="img/oferta3.jpg" class="oferta">
+          <img src="img/oferta4.jpg" class="oferta">
+
         </div>
         <div class="panel-derecho">
           <h4>ARTÍCULOS MÁS VENDIDOS</h4>
+
+          <img src="img/art1.jpg" alt="Articulo 1" class="masVendido"> 
+          <a href="" class="link">Sony Playstation 5</a>
+
+          <img src="img/art2.jpg" alt="Articulo 2" class="masVendido">
+          <a href="" class="link">Cortadora de cesped Petri</a>
+
+          <img src="img/art3.jpg" alt="Articulo 3" class="masVendido">
+          <a href="" class="link">Microondas BGH Quick Chef</a>
+
+          <img src="img/art4.jpg" alt="Articulo 4" class="masVendido">
+          <a href="" class="link">Mountain bike Sunny</a>
         </div>
       </div>
       <div class="footer">
-        FOOTER
+        Copyright © 2021 TR STORE
       </div>
     </div>
   </html>
