--- a/mobile.html
+++ b/mobile.html
@@ -1,5 +1,6 @@
 <body>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         font-size: 18px;
@@ -14,7 +15,6 @@
       }
 
       .contenedor {
-        width: 800px;
         margin: auto;
         border: 1px solid black;
       }
@@ -28,7 +28,7 @@
         color: white;
         display: flex;
         align-items: center;
-        background-color: #1DB954;
+        background-color: #1db954;
       }
 
       .logo {
@@ -75,7 +75,7 @@
 
       .cuerpo {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
       }
 
       .panel-izquierdo {
@@ -87,8 +87,6 @@
       .panel-derecho {
         border-left: 1px solid black;
         padding: 15px;
-        width: 250px;
-        display: block;
         text-align: center;
         font-size: 15px;
       }
@@ -114,23 +112,20 @@
         margin-bottom: 10px;
       }
 
-      .oferta {
-        width: 220;
-        height: 170;
-        border: 1px solid black;
+      .oferta-foto {
+        width: 100%;
         margin-left: 10px;
         margin-right: 10px;
         display: inline;
       }
 
-      .masVendido {
-        width: 200;
-        height: 140;
+      .mas-vendido {
+        width: 100%;
         border: 1px solid black;
       }
 
       .anuncio {
-        width: 500;
+        width: 100%;
         height: 90;
         margin-top: 20px;
         margin-bottom: 20px;
@@ -138,7 +133,15 @@
 
       .contenedor-ofertas {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+      }
+
+      .oferta {
+        flex-direction: column;
+        display: flex;
+        align-items: center;
+        border: 1px solid black;
+        margin: 10px;
       }
     </style>
   </head>
@@ -172,12 +175,12 @@
           <h3>OFERTAS</h3>
 
           <div class="contenedor-ofertas">
-            <div>
-              <img src="img/oferta1.jpg" class="oferta" />
+            <div class="oferta">
+              <img src="img/oferta1.jpg" class="oferta-foto" />
               <a href="" class="link">Lavarropas</a>
             </div>
-            <div>
-              <img src="img/oferta2.jpg" class="oferta" /><br />
+            <div class="oferta">
+              <img src="img/oferta2.jpg" class="oferta-foto" /><br />
               <a href="" class="link">Heladera</a>
             </div>
           </div>
@@ -187,12 +190,12 @@
           </a>
 
           <div class="contenedor-ofertas">
-            <div>
-              <img src="img/oferta3.jpg" class="oferta" /><br />
+            <div class="oferta">
+              <img src="img/oferta3.jpg" class="oferta-foto" /><br />
               <a href="" class="link">Zapatillas</a>
             </div>
-            <div>
-              <img src="img/oferta4.jpg" class="oferta" /><br />
+            <div class="oferta">
+              <img src="img/oferta4.jpg" class="oferta-foto" /><br />
               <a href="" class="link">Auriculares</a>
             </div>
           </div>
@@ -200,13 +203,13 @@
         <div class="panel-derecho">
           <h4>ARTÍCULOS MÁS VENDIDOS</h4>
 
-          <img src="img/art1.jpg" alt="Articulo 1" class="masVendido" />
+          <img src="img/art1.jpg" alt="Articulo 1" class="mas-vendido" />
           <a href="" class="link">Sony Playstation 5</a>
 
-          <img src="img/art2.jpg" alt="Articulo 2" class="masVendido" />
+          <img src="img/art2.jpg" alt="Articulo 2" class="mas-vendido" />
           <a href="" class="link">Cortadora de cesped Petri</a>
 
-          <img src="img/art3.jpg" alt="Articulo 3" class="masVendido" />
+          <img src="img/art3.jpg" alt="Articulo 3" class="mas-vendido" />
           <a href="" class="link">Microondas BGH Quick Chef</a>
         </div>
       </div>
